<resources>
    <string name="bottom_sheet_behavior">
        com.google.android.material.bottomsheet.BottomSheetBehavior</string>

    <string name="app_name">Habit tracker</string>
    <string name="addButtonText">fab</string>
    <string name="habit">Habit: %1$s</string>
    <string name="text_save_btn">Save</string>
    <string name="text_days">days</string>
    <string name="text_frequency">times every</string>
    <string name="text_repeat">Repeat</string>
    <string name="text_periodicity">Periodicity</string>
    <string name="text_bad">Bad</string>
    <string name="text_good">Good</string>
    <string name="text_type">Type</string>
    <string name="text_priority">Priority</string>
    <string name="text_hint_description">Description</string>
    <string name="text_hint_name">Name</string>
    <string name="text_pick_color">Pick color</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="about">Hey! In this app you can record your habits!</string>
    <string name="habits">Habits</string>
    <string name="about_title">About</string>
    <string name="habit_periodicity">%s times every %s day(s)</string>
    <string name="habit_name_text">Habit: %s</string>
    <string name="habit_description_text">Description: %s</string>
    <string name="habit_priority_text">Priority: %s</string>
    <string name="habit_type_text">Type: %s</string>
    <string name="label_habits">Habits</string>
    <string name="label_edit_habit">Edit habit</string>
    <string name="label_about">About</string>
</resources>