<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.habittracker.ui.habits.ViewPagerFragment"
        android:label="@string/label_habits"
        tools:layout="@layout/fragment_view_pager" >
        <action
            android:id="@+id/action_nav_home_to_nav_habit_editor"
            app:destination="@id/nav_habit_editor" />
    </fragment>

    <fragment
        android:id="@+id/nav_habit_editor"
        android:name="com.example.habittracker.ui.habits.HabitEditorFragment"
        android:label="@string/label_edit_habit"
        tools:layout="@layout/fragment_habit_editor" >
        <action
            android:id="@+id/action_nav_habit_editor_to_nav_home"
            app:destination="@id/nav_home"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.habittracker.ui.about.AboutFragment"
        android:label="@string/label_about"
        tools:layout="@layout/fragment_about" />

</navigation>